Combine Purpose Fields
* Add incl/excl fields

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/naru-details/naru-details.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
   <div class="grid-double">
-    {{ _applicationSubmission.naruPurpose }}
+    {{ _applicationSubmission.purpose }}
   </div>
   <ng-container *ngIf="_applicationSubmission.naruSubtype?.code === 'ARFU'">
     <div class="subheading2 grid-1">
