--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pofo-details/pofo-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pofo-details/pofo-details.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
   <div class="grid-double">
-    <span>{{ _applicationSubmission.soilPurpose }}</span>
+    <span>{{ _applicationSubmission.purpose }}</span>
   </div>
 
   <div class="subheading1 full-width">Fill to be Placed</div>
