--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/subd-details/subd-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/subd-details/subd-details.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
   <div class="grid-double">
-    {{ _applicationSubmission.subdPurpose }}
+    {{ _applicationSubmission.purpose }}
   </div>
   <div class="subheading2 grid-1">Why do you believe this parcel is suitable for subdivision?</div>
   <div class="grid-double">
