--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/tur-details/tur-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/tur-details/tur-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="_application" class="review-table">
   <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
   <div class="grid-double">
-    {{ _application.turPurpose }}
+    {{ _application.purpose }}
   </div>
   <div class="subheading2 grid-1">
     Specify any agricultural activities such as livestock operations, greenhouses or horticultural activities in
