--- a/portal-frontend/src/app/features/application-details/pofo-details/pofo-details.component.html
+++ b/portal-frontend/src/app/features/application-details/pofo-details/pofo-details.component.html
@@ -44,11 +44,11 @@
 
   <div class="subheading2 grid-1">
     What is the purpose of the proposal?
-    <app-updated-banner *ngIf="updatedFields.includes('soilPurpose')"></app-updated-banner>
+    <app-updated-banner *ngIf="updatedFields.includes('purpose')"></app-updated-banner>
   </div>
   <div class="grid-double">
-    {{ _applicationSubmission.soilPurpose }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilPurpose"></app-no-data>
+    {{ _applicationSubmission.purpose }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.purpose"></app-no-data>
   </div>
 
   <div class="subheading1 full-width">
