--- a/portal-frontend/src/app/features/application-details/subd-details/subd-details.component.html
+++ b/portal-frontend/src/app/features/application-details/subd-details/subd-details.component.html
@@ -30,11 +30,11 @@
   </div>
   <div class="subheading2 grid-1">
     What is the purpose of the proposal?
-    <app-updated-banner *ngIf="updatedFields.includes('subdPurpose')"></app-updated-banner>
+    <app-updated-banner *ngIf="updatedFields.includes('purpose')"></app-updated-banner>
   </div>
   <div class="grid-double">
-    {{ _applicationSubmission.subdPurpose }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.subdPurpose"></app-no-data>
+    {{ _applicationSubmission.purpose }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.purpose"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
     Why do you believe this parcel is suitable for subdivision?
