--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-conditions.component.html
@@ -12,6 +12,15 @@
     </button>
   </div>
   <div class="buttons">
-    <button type="button" (click)="onAddNewCondition()" mat-stroked-button color="primary">Add New Condition</button>
+    <button
+      [ngClass]="{ 'error-field-outlined': showError }"
+      type="button"
+      (click)="onAddNewCondition()"
+      mat-stroked-button
+      color="primary"
+    >
+      Add New Condition
+    </button>
+    <app-error-message *ngIf="showError"></app-error-message>
   </div>
 </section>
