--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
@@ -5,7 +5,7 @@
 <div *ngIf="editable">
   <button
     type="button"
-    [ngClass]="{ 'upload-button': true, 'error-field-outlined': showError }"
+    [ngClass]="{ 'upload-button': true, 'error-field-outlined ng-invalid': showError }"
     class=""
     (click)="onUploadFile()"
     mat-flat-button
