--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-conditions.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="buttons">
     <button
-      [ngClass]="{ 'error-field-outlined': showError }"
+      [ngClass]="{ 'error-field-outlined ng-invalid': showError }"
       type="button"
       (click)="onAddNewCondition()"
       mat-stroked-button
