--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -147,7 +147,7 @@
     margin: 24px 0 !important;
   }
 
-  .error-field-outlined {
+  .error-field-outlined.ng-invalid {
     border-color: colors.$error-color !important;
 
     .mat-button-toggle {
