--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div>
       <button
-        [ngClass]="{ 'error-field-outlined': showError }"
+        [ngClass]="{ 'error-field-outlined ng-invalid': showError }"
         type="button"
         [matMenuTriggerFor]="decisionComponentMenu"
         mat-stroked-button
