Add Exclusion Step 6 to Portal
* Add Step 6 with Validation to Portal
* Hook up new document types
* Add migration for missed field in last MR

--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -146,6 +146,14 @@
         (navigateToStep)="onBeforeSwitchStep($event)"
         (exit)="onExit()"
       ></app-naru-proposal>
+      <app-excl-proposal
+        *ngIf="applicationSubmission.typeCode === 'EXCL'"
+        [$applicationSubmission]="$applicationSubmission"
+        [$applicationDocuments]="$applicationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+        (exit)="onExit()"
+      ></app-excl-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
