Feature/alcs 880 decision v2 errors (#809)
errors on decision v2
highlight buttons
scroll to error
update SUBM status colour

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
@@ -3,7 +3,17 @@
   <div *ngIf="editable" class="subheading2">Decision Documents *</div>
 </div>
 <div *ngIf="editable">
-  <button type="button" class="upload-button" (click)="onUploadFile()" mat-flat-button color="primary">Upload</button>
+  <button
+    type="button"
+    [ngClass]="{ 'upload-button': true, 'error-field-outlined ng-invalid': showError }"
+    class=""
+    (click)="onUploadFile()"
+    mat-flat-button
+    color="primary"
+  >
+    Upload
+  </button>
+  <app-error-message *ngIf="showError"></app-error-message>
 </div>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z3 documents">
   <ng-container matColumnDef="type">
