--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
@@ -4,7 +4,11 @@
   </div>
 
   <div class="component" *ngFor="let component of components; let index = index; trackBy: trackByFn">
-    <app-decision-component [(data)]="components[index]" [codes]="codes" (dataChange)='onChange()'></app-decision-component>
+    <app-decision-component
+      [(data)]="components[index]"
+      [codes]="codes"
+      (dataChange)="onChange()"
+    ></app-decision-component>
     <div class="row">
       <button type="button" class="remove-button" mat-stroked-button color="warn" (click)="onRemove(index)">
         Remove Component
@@ -13,9 +17,18 @@
   </div>
 
   <div class="row">
-    <button type="button" [matMenuTriggerFor]="decisionComponentMenu" mat-stroked-button color="primary">
-      ADD Decision component ▾
-    </button>
+    <div>
+      <button
+        [ngClass]="{ 'error-field-outlined ng-invalid': showError }"
+        type="button"
+        [matMenuTriggerFor]="decisionComponentMenu"
+        mat-stroked-button
+        color="primary"
+      >
+        ADD Decision component ▾
+      </button>
+      <app-error-message *ngIf="showError"></app-error-message>
+    </div>
   </div>
 
   <mat-menu xPosition="before" #decisionComponentMenu="matMenu">
