--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -1,7 +1,7 @@
 <div class="step-description">
   <h2>Primary Contact</h2>
-  <p *ngIf="!isLocalGovernmentUser">Select from the listed parcel owners or identify a third party agent</p>
-  <p *ngIf="isLocalGovernmentUser">
+  <p *ngIf="!isGovernmentUser">Select from the listed parcel owners or identify a third party agent</p>
+  <p *ngIf="isGovernmentUser">
     Identify staff from the local or first nation government listed below or a third-party agent to act as the primary
     contact.
   </p>
@@ -28,8 +28,8 @@
       </button>
       <div class="selected" *ngIf="owner.uuid === selectedOwnerUuid"><mat-icon>check</mat-icon>Primary Contact</div>
     </ng-container>
-    <ng-container *ngIf="isLocalGovernmentUser">
-      <h5>{{governmentName}} Staff</h5>
+    <ng-container *ngIf="isGovernmentUser">
+      <h5>{{ governmentName }} Staff</h5>
       <button
         (click)="onSelectGovernment()"
         *ngIf="!selectedLocalGovernment"
@@ -89,6 +89,13 @@
           <mat-form-field appearance="outline">
             <input id="orgName" matInput placeholder="Enter Organization Name" formControlName="organizationName" />
           </mat-form-field>
+          <div
+            *ngIf="organizationName.invalid && (organizationName.dirty || organizationName.touched)"
+            class="field-error"
+          >
+            <mat-icon>warning</mat-icon>
+            <div *ngIf="organizationName.errors?.['required']">This field is required</div>
+          </div>
         </div>
         <div>
           <label for="phoneNumber">Phone Number</label>
@@ -126,8 +133,8 @@
 <section>
   <h4>Primary Contact Authorization Letters</h4>
   <div>
-    An authorization letter must be provided if:
-    <ng-container *ngIf="!isLocalGovernmentUser">
+    <ng-container *ngIf="!isGovernmentUser">
+      An authorization letter must be provided if:
       <ol>
         <li>the parcel under application is owned by more than one person;</li>
         <li>the parcel(s) is owned by an organization; or</li>
@@ -140,7 +147,7 @@
         further instruction and an Authorization Letter template.
       </p>
     </ng-container>
-    <ng-container *ngIf="isLocalGovernmentUser">
+    <ng-container *ngIf="isGovernmentUser">
       An authorization letter must be provided only if the application is being submitted by a third-party agent. Please
       consult the Supporting Documentation page of the <a>TODO: FIX THIS: ALC website</a> for further instruction.
     </ng-container>
@@ -153,8 +160,8 @@
       (uploadFiles)="attachFile($event, DOCUMENT_TYPE.AUTHORIZATION_LETTER)"
       (deleteFile)="onDeleteFile($event)"
       (openFile)="openFile($event)"
-      [showErrors]="showErrors"
-      [isRequired]="needsAuthorizationLetter || selectedThirdPartyAgent"
+      [showErrors]="showErrors || selectedLocalGovernment"
+      [isRequired]="needsAuthorizationLetter"
     ></app-file-drag-drop>
   </div>
 </section>
