Create inclusion proposal component and template

--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -154,6 +154,14 @@
         (navigateToStep)="onBeforeSwitchStep($event)"
         (exit)="onExit()"
       ></app-excl-proposal>
+      <app-incl-proposal
+        *ngIf="applicationSubmission.typeCode === 'INCL'"
+        [$applicationSubmission]="$applicationSubmission"
+        [$applicationDocuments]="$applicationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+        (exit)="onExit()"
+      ></app-incl-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
