--- a/portal-frontend/src/app/features/edit-submission/proposal/incl-proposal/incl-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/incl-proposal/incl-proposal.component.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="full-row">
-      <label for="agSupport">Does the proposal support agricultural in the short or long term? Please explain.</label>
+      <label for="agSupport">Does the proposal support agriculture in the short or long term? Please explain.</label>
       <mat-form-field appearance="outline">
         <textarea
           formControlName="agSupport"
