Reduce Network Calls / Loads for Edit Submission
* Only save/load the application when components are dirty
* Remove logic to auto-save on every step navigation
* Add logging to help debug stepper issues

--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -41,6 +41,7 @@
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
         (componentInitialized)="onParcelDetailsInitialized()"
+        (exit)="onExit()"
       ></app-parcel-details>
     </div>
   </cdk-step>
@@ -51,6 +52,7 @@
         [showErrors]="showValidationErrors"
         [$applicationSubmission]="$applicationSubmission"
         (navigateToStep)="onBeforeSwitchStep($event)"
+        (exit)="onExit()"
       ></app-other-parcels>
     </div>
   </cdk-step>
