--- a/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
@@ -142,7 +142,11 @@
       <app-info-banner>
         Please refer to <a href="TODO">Contact Us</a> on the ALC website for more detail.
       </app-info-banner>
-      <app-soil-table tableHeader="Soil to be Removed" [(data)]="removalTableData"></app-soil-table>
+      <app-soil-table
+        tableHeader="Soil to be Removed"
+        [(data)]="removalTableData"
+        (dataChange)="markDirty()"
+      ></app-soil-table>
     </div>
     <div class="full-row">
       <label
@@ -150,7 +154,11 @@
         removed.</label
       >
       <div class="subtext">If no proposed soil has already been removed, please leave 0 in the fields below</div>
-      <app-soil-table tableHeader="Soil already Removed" [(data)]="alreadyRemovedTableData"></app-soil-table>
+      <app-soil-table
+        tableHeader="Soil already Removed"
+        [(data)]="alreadyRemovedTableData"
+        (dataChange)="markDirty()"
+      ></app-soil-table>
     </div>
 
     <section>
