--- a/portal-frontend/src/app/features/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -148,9 +148,21 @@
         tableHeader2="Fill to be Placed"
         [(data)]="removalTableData"
         [(data2)]="fillTableData"
+        (dataChange)="markDirty()"
+        (data2Change)="markDirty()"
       ></app-soil-table>
-      <app-soil-table *ngIf="isMobile" tableHeader="Soil to be Removed" [(data)]="removalTableData"></app-soil-table>
-      <app-soil-table *ngIf="isMobile" tableHeader="Fill to be Placed" [(data)]="fillTableData"></app-soil-table>
+      <app-soil-table
+        *ngIf="isMobile"
+        tableHeader="Soil to be Removed"
+        [(data)]="removalTableData"
+        (dataChange)="markDirty()"
+      ></app-soil-table>
+      <app-soil-table
+        *ngIf="isMobile"
+        tableHeader="Fill to be Placed"
+        [(data)]="fillTableData"
+        (dataChange)="markDirty()"
+      ></app-soil-table>
     </div>
     <div class="full-row">
       <label
@@ -164,16 +176,20 @@
         tableHeader2="Fill already Placed"
         [(data)]="alreadyRemovedTableData"
         [(data2)]="alreadyFilledTableData"
+        (dataChange)="markDirty()"
+        (data2Change)="markDirty()"
       ></app-soil-table>
       <app-soil-table
         *ngIf="isMobile"
         tableHeader="Soil already Removed"
         [(data)]="alreadyRemovedTableData"
+        (dataChange)="markDirty()"
       ></app-soil-table>
       <app-soil-table
         *ngIf="isMobile"
         tableHeader="Fill already Placed"
         [(data)]="alreadyFilledTableData"
+        (dataChange)="markDirty()"
       ></app-soil-table>
     </div>
 
