Improve Board Performance
* Break get boards call to load less data
* Add get board detail call to get full board details

--- a/alcs-frontend/src/app/features/admin/board-management/board-management-dialog/board-management-dialog.component.html
+++ b/alcs-frontend/src/app/features/admin/board-management/board-management-dialog/board-management-dialog.component.html
@@ -40,6 +40,9 @@
 
       <div>
         <div>Click to add columns*</div>
+        <div class="subtext">
+          Disabled columns have cards and cannot be removed from the board
+        </div>
         <div class="columns">
           <ul>
             <li *ngFor="let status of cardStatuses">
